[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Substrate node compatible with Millau runtime"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "millau-bridge-node"
repository  = "https://github.com/darwinia-network/darwinia-launch"
version     = "0.1.0"

[dependencies]
# crates.io
jsonrpc-core = { version = "15.1.0" }
serde_json   = { version = "1.0.64" }
structopt    = { version = "0.3.21" }
# bridge
bp-messages                = { git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.1" }
bp-runtime                 = { git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.1" }
millau-runtime             = { path = "../runtime" }
pallet-bridge-messages     = { git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.1" }
pangolin-bridge-primitives = { git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s-issuing-backing-v0.11.1" }
# darwinia
drml-primitives = { git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s-issuing-backing-v0.11.1" }
# bp-messages                = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
# bp-runtime                 = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
millau-primitives          = { path = "../primitives" }
# millau-runtime             = { path = "../runtime" }
# pallet-bridge-messages     = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
# pangolin-bridge-primitives = { git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
# substrate
node-inspect                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-basic-authorship            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-cli                         = { features = ["wasmtime"], git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-client-api                  = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-consensus                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-consensus-aura              = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-executor                    = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-finality-grandpa-rpc        = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-keystore                    = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-rpc                         = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-service                     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-telemetry                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sc-transaction-pool            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-consensus                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-consensus-aura              = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-core                        = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-inherents                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-runtime                     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
sp-timestamp                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }
