[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Substrate node compatible with Millau runtime"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "millau-bridge-node"
repository  = "https://github.com/darwinia-network/darwinia-launch"
version     = "0.1.0"

[dependencies]
# crates.io
jsonrpc-core = { version = "15.1.0" }
serde_json   = { version = "1.0.64" }
structopt    = { version = "0.3.21" }
# bridge
bp-messages                = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "main" }
bp-runtime                 = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "main" }
millau-runtime             = { path = "../runtime" }
pallet-bridge-messages     = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "main" }
pangolin-bridge-primitives = { git = "https://github.com/darwinia-network/darwinia-common", branch = "master" }
# darwinia
drml-primitives   = { git = "https://github.com/darwinia-network/darwinia-common", branch = "master" }
millau-primitives = { path = "../primitives" }
# substrate
node-inspect                   = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-basic-authorship            = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-cli                         = { features = ["wasmtime"], git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-client-api                  = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-consensus                   = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-consensus-aura              = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-executor                    = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-finality-grandpa-rpc        = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-keystore                    = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-rpc                         = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-service                     = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-telemetry                   = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-transaction-pool            = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-consensus                   = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-consensus-aura              = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-core                        = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-inherents                   = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime                     = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-timestamp                   = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "main" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }
