[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Substrate node compatible with Millau runtime"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "millau-bridge-node"
repository  = "https://github.com/darwinia-network/darwinia-launch"
version     = "0.1.0"

[dependencies]
# crates.io
jsonrpc-core = { version = "15.1.0" }
serde_json   = { version = "1.0.64" }
structopt    = { version = "0.3.21" }
# bridge
bp-messages                = { git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.3" }
bp-runtime                 = { git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.3" }
millau-runtime             = { path = "../runtime" }
pallet-bridge-messages     = { git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.3" }
pangolin-bridge-primitives = { git = "https://github.com/darwinia-network/darwinia-common", tag = "darwinia-v0.11.3" }
# darwinia
drml-primitives   = { git = "https://github.com/darwinia-network/darwinia-common", tag = "darwinia-v0.11.3" }
millau-primitives = { path = "../primitives" }
# substrate
node-inspect                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-basic-authorship            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-cli                         = { features = ["wasmtime"], git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-client-api                  = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-consensus                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-consensus-aura              = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-executor                    = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-finality-grandpa-rpc        = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-keystore                    = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-rpc                         = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-service                     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-telemetry                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sc-transaction-pool            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-consensus                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-consensus-aura              = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-core                        = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-inherents                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-runtime                     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-timestamp                   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }
