[package]
authors    = ["Darwinia Network <hello@darwinia.network>"]
edition    = "2018"
homepage   = "https://darwinia.network"
license    = "GPL-3.0"
name       = "millau-primitives"
repository = "https://github.com/darwinia-network/darwinia-launch"
version    = "0.1.0"

[dependencies]
# paritytech
bp-messages   = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common.git", branch = "s2s" }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }

[features]
default = ["std"]
std     = ["paritytech-std"]

paritytech-std = [
	"bp-messages/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
]
