[package]
authors    = ["Darwinia Network <hello@darwinia.network>"]
edition    = "2018"
homepage   = "https://darwinia.network"
license    = "GPL-3.0"
name       = "millau-primitives"
repository = "https://github.com/darwinia-network/darwinia-launch"
version    = "0.1.0"

[dependencies]
# paritytech
bp-messages   = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "main" }
bp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "main" }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-api        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }

[features]
default = ["std"]
std     = ["paritytech-std"]

paritytech-std = [
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-api/std",
	"sp-std/std",
]
