[package]
authors    = ["Darwinia Network <hello@darwinia.network>"]
edition    = "2018"
homepage   = "https://darwinia.network"
license    = "GPL-3.0"
name       = "millau-runtime"
repository = "https://github.com/darwinia-network/darwinia-launch"
version    = "0.1.0"

[dependencies]
# crates.io
array-bytes = { version = "1.3.3" }
codec       = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
serde       = { version = "1.0.126", features = ["derive"], optional = true }
# bridge
bp-header-chain              = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-messages                  = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-message-dispatch          = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-runtime                   = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bridge-runtime-common        = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
pallet-bridge-dispatch       = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
pallet-bridge-grandpa        = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
pallet-bridge-messages       = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
pallet-shift-session-manager = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
# darwinia
darwinia-balances         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
darwinia-support          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
darwinia-s2s-backing      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
dp-asset                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
millau-primitives         = { default-features = false, path = "../primitives" }
# <--- pangolin
drml-primitives                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
pangolin-bridge-primitives     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
pangolin-constants             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
pangolin-runtime-system-params = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "s2s" }
# pangolin --->
# substrate
frame-executive                            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
frame-support                              = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
frame-system                               = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
frame-system-rpc-runtime-api               = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-aura                                = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-grandpa                             = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-randomness-collective-flip          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-session                             = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-sudo                                = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-timestamp                           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-transaction-payment                 = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-api                                     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-block-builder                           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-consensus-aura                          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-core                                    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-finality-grandpa                        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-inherents                               = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-offchain                                = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-runtime                                 = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-session                                 = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-std                                     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-transaction-pool                        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-trie                                    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-version                                 = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "s2s" }

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0" }

[features]
default = ["std"]
std     = [
	"codec/std",
	"serde",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-runtime/std",
	"bridge-runtime-common/std",
	"darwinia-s2s-backing/std",
	"dp-asset/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-shift-session-manager/std",
	"darwinia-balances/std",
	"darwinia-support/std",
	"millau-primitives/std",
	"drml-primitives/std",
	"pangolin-bridge-primitives/std",
	"pangolin-constants/std",
	"pangolin-runtime-system-params/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-trie/std",
	"sp-version/std",
]
